Fix sass includes

--- a/source/stylesheets/govuk_styles/govuk_template/_template_colours.scss
+++ b/source/stylesheets/govuk_styles/govuk_template/_template_colours.scss
@@ -1,4 +1,5 @@
 // GOV.UK template colours
+@import "../govuk_frontend_toolkit/colours";
 
 $proposition-border: #2e3133;
 // Based on GOV.UK brand blue but slightly lighter so it hits contrast on the
