--- a/source/stylesheets/govuk_styles/govuk_template/govuk-template.scss
+++ b/source/stylesheets/govuk_styles/govuk_template/govuk-template.scss
@@ -1,3 +1,28 @@
+// GOV.UK front end toolkit
+// Sass variables, mixins and functions
+// https://github.com/alphagov/govuk_frontend_toolkit/tree/master/stylesheets
+
+// Settings (variables)
+@import "../govuk_frontend_toolkit/colours";                                // Colour variables
+@import "../govuk_frontend_toolkit/font_stack";                             // Font family variables
+@import "../govuk_frontend_toolkit/measurements";                           // Widths and gutter variables
+
+// Mixins
+@import "../govuk_frontend_toolkit/conditionals";                           // Media query mixin
+@import "../govuk_frontend_toolkit/device-pixels";                          // Retina image mixin
+@import "../govuk_frontend_toolkit/grid_layout";                            // Basic grid layout mixin
+@import "../govuk_frontend_toolkit/typography";                             // Core bold and heading mixins, also external links
+@import "../govuk_frontend_toolkit/shims";                                  // Inline block mixin, clearfix placeholder
+
+// Mixins to generate components (chunks of UI)
+@import "../govuk_frontend_toolkit/design-patterns/alpha-beta";
+@import "../govuk_frontend_toolkit/design-patterns/buttons";
+@import "../govuk_frontend_toolkit/design-patterns/breadcrumbs";
+
+// Functions
+@import "../govuk_frontend_toolkit/url-helpers";                            // Function to output image-url, or prefixed path (Rails and Compass only)
+
+
 /* local styleguide includes */
 @import "template_colours";
 
