Add 2 more products

--- a/source/includes/_footer.erb
+++ b/source/includes/_footer.erb
@@ -5,6 +5,45 @@
     <div class="footer-meta">
       <div class="footer-meta-inner">
 
+<!--
+
+    <h3 class="heading-small">Other GOV.UK products</h3>
+
+    <ul class="product-list">
+
+      <% if primary_nav != 'verify' %>
+      <li><a href="/verify/index.html">GOV.UK Verify</a></li>
+      <% end %>
+
+      <% if primary_nav != 'service-manual' %>
+      <li><a href="/service-manual/index.html">Service Manual</a></li>
+      <% end %>
+
+      <% if primary_nav != 'notify' %>
+      <li><a href="/notify/index.html">GOV.UK Notify</a></li>
+      <% end %>
+
+      <% if primary_nav != 'frontend' %>
+      <li><a href="/frontend/index.html">GOV.UK Frontend</a></li>
+      <% end %>
+
+      <% if primary_nav != 'paas' %>
+      <li><a href="/paas/index.html">Platform as a Service</a></li>
+      <% end %>
+
+      <% if primary_nav != 'pay' %>
+      <li><a href="/pay/index.html">GOV.UK Pay</a></li>
+      <% end %>
+
+      <% if primary_nav != 'digital-marketplace' %>
+      <li><a href="/digital-marketplace/index.html">Digital Marketplace</a></li>
+      <% end %>
+
+    </ul>
+
+-->
+
+
         <div class="open-government-licence">
           <p class="logo"><a href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Open Government Licence</a></p>
           
