--- a/source/layouts/default.erb
+++ b/source/layouts/default.erb
@@ -42,7 +42,9 @@
       </div>
     </div>
 
-    <%= partial("includes/footer") %>
+    <%= partial("includes/footer", :locals => {
+      :primary_nav        => current_page.data.primary_nav
+    }) %>
 
   </body>
 </html>
