--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,6 +5,10 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+    <!-- Stop prototypes being indexed -->
+    <meta name="robots" content="noindex">
+
     <title><%= current_page.data.title || "GOV.UK" %></title>
 
     <style>
