--- a/source/stylesheets/_govuk_styling.scss
+++ b/source/stylesheets/_govuk_styling.scss
@@ -1,5 +1,6 @@
 @import 'govuk_styles/patterns/examples';
 @import 'govuk_styles/patterns/tabs';
+@import 'govuk_styles/patterns/search-in-header';
 @import 'govuk_styles/patterns/product-page';
 
 
