--- a/source/includes/_header.erb
+++ b/source/includes/_header.erb
@@ -1,11 +1,13 @@
+<% phase ||= false %>
+
 <header role="banner" id="global-header" class="with-proposition">
   <div class="header-wrapper">
     <div class="header-global">
       <div class="header-logo">
         <a href="index.html" id="logo" class="content">
           <img src="{{ asset_path }}images/gov.uk_logotype_crown_invert_trans.png?0.17.3" width="35" height="31" alt=""> GOV.UK <span class="product-name"><%= product %></span>
-          <% if current_page.data.phase == 'beta' %>
-          <span class="phase-banner-beta"><strong class="phase-tag">BETA</strong></span>
+          <% if phase %>
+          <span class="phase-banner-beta"><strong class="phase-tag"><%= phase %></strong></span>
           <% end %>
         </a>
       </div>
