add option 3 for service manual index

--- a/source/product-headers.html.erb
+++ b/source/product-headers.html.erb
@@ -5,7 +5,7 @@ title: GOV.UK product page headers
 
 <main id="content" class="content" role="main" style="padding-bottom: 30px">
 
-	<h1 class="heading-large">GOV.UK product headers</h1>
+	<h1 class="heading-large">GOV.UK product floaters</h1>
 
 	<p>Here's how headers could work for GOV.UK products.</p>
 
@@ -52,6 +52,7 @@ title: GOV.UK product page headers
   :phase		=> 'alpha'
 }) %>
 <br>
+
 <header role="banner" id="global-header" class="with-proposition">
   <div class="header-wrapper">
     <div class="header-global" style="width: 100%">
@@ -71,7 +72,10 @@ title: GOV.UK product page headers
     </div>
   </div>
 </header>
+
+
 <div id="global-header-bar"></div>
+
 <br>
 
 <br>
