Update org logo CSS

--- a/source/product-headers.html.erb
+++ b/source/product-headers.html.erb
@@ -72,6 +72,170 @@ title: GOV.UK product page headers
   </div>
 </header>
 <div id="global-header-bar"></div>
+
+
+<main id="content" class="content" role="main" style="padding-bottom: 20px">
+  <br><br>
+  <p>Alternatively we could give the products a GDS identity, like this:</p>
+
+</main>
+
+    <br>
+    <header role="banner" id="global-header" class="with-proposition">
+      <div class="header-wrapper">
+        <div class="header-global">
+          <div class="header-logo">
+            <div class="org-logo">
+              <h2 id="cabinet-office" class="cabinet-office-brand-colour">
+                <a class="organisation-logo organisation-logo-single-identity organisation-logo-single-identity-medium" href="/government/organisations/cabinet-office">
+                  <span>Government Digital Service</span>
+                </a>  
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="header-proposition">
+          <div class="content">
+            <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+            <nav id="proposition-menu">
+              <a href="/" id="proposition-name" class="helvetica">GOV.UK Pay</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="global-header-bar"></div>
+        <br>
+    <header role="banner" id="global-header" class="with-proposition">
+      <div class="header-wrapper">
+        <div class="header-global">
+          <div class="header-logo">
+            <div class="org-logo">
+              <h2 id="cabinet-office" class="cabinet-office-brand-colour">
+                <a class="organisation-logo organisation-logo-single-identity organisation-logo-single-identity-medium" href="/government/organisations/cabinet-office">
+                  <span>Government Digital Service</span>
+                </a>  
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="header-proposition" style="width: 50%">
+          <div class="content">
+            <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+            <nav id="proposition-menu">
+              <a href="/" id="proposition-name" class="helvetica">GOV.UK Notify</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="global-header-bar"></div>
+        <br>
+    <header role="banner" id="global-header" class="with-proposition">
+      <div class="header-wrapper">
+        <div class="header-global">
+          <div class="header-logo">
+            <div class="org-logo">
+              <h2 id="cabinet-office" class="cabinet-office-brand-colour">
+                <a class="organisation-logo organisation-logo-single-identity organisation-logo-single-identity-medium" href="/government/organisations/cabinet-office">
+                  <span>Government Digital Service</span>
+                </a>  
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="header-proposition" style="width: 50%">
+          <div class="content">
+            <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+            <nav id="proposition-menu">
+              <a href="/" id="proposition-name" class="helvetica">GOV.UK Verify</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="global-header-bar"></div>    <br>
+    <header role="banner" id="global-header" class="with-proposition">
+      <div class="header-wrapper">
+        <div class="header-global">
+          <div class="header-logo">
+            <div class="org-logo">
+              <h2 id="cabinet-office" class="cabinet-office-brand-colour">
+                <a class="organisation-logo organisation-logo-single-identity organisation-logo-single-identity-medium" href="/government/organisations/cabinet-office">
+                  <span>Government Digital Service</span>
+                </a>  
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="header-proposition" style="width: 50%">
+          <div class="content">
+            <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+            <nav id="proposition-menu">
+              <a href="/" id="proposition-name" class="helvetica">Platform as a Service</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="global-header-bar"></div>
+        <br>
+    <header role="banner" id="global-header" class="with-proposition">
+      <div class="header-wrapper">
+        <div class="header-global">
+          <div class="header-logo">
+            <div class="org-logo">
+              <h2 id="cabinet-office" class="cabinet-office-brand-colour">
+                <a class="organisation-logo organisation-logo-single-identity organisation-logo-single-identity-medium" href="/government/organisations/cabinet-office">
+                  <span>Government Digital Service</span>
+                </a>  
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="header-proposition" style="width: 50%">
+          <div class="content">
+            <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+            <nav id="proposition-menu">
+              <a href="/" id="proposition-name" class="helvetica">GOV.UK Frontend</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="global-header-bar"></div>
+        <br>
+    <header role="banner" id="global-header" class="with-proposition">
+      <div class="header-wrapper">
+        <div class="header-global">
+          <div class="header-logo">
+            <div class="org-logo">
+              <h2 id="cabinet-office" class="cabinet-office-brand-colour">
+                <a class="organisation-logo organisation-logo-single-identity organisation-logo-single-identity-medium" href="/government/organisations/cabinet-office">
+                  <span>Government Digital Service</span>
+                </a>  
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <div class="header-proposition" style="width: 50%">
+          <div class="content">
+            <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
+            <nav id="proposition-menu">
+              <a href="/" id="proposition-name" class="helvetica">Service Manual</a>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div id="global-header-bar"></div>
+
 <br>
 
 <br>
