--- a/source/includes/_header.erb
+++ b/source/includes/_header.erb
@@ -1,7 +1,7 @@
 <% phase ||= false %>
 
 <header role="banner" id="global-header" class="with-proposition">
-  <div class="header-wrapper">
+  <div class="header-wrapper govuk-product">
     <div class="header-global">
       <div class="header-logo">
         <a href="index.html" id="logo" class="content">
