Integrate search into header

--- a/source/product-headers.html.erb
+++ b/source/product-headers.html.erb
@@ -5,7 +5,7 @@ title: GOV.UK product page headers
 
 <main id="content" class="content" role="main" style="padding-bottom: 30px">
 
-	<h1 class="heading-large">GOV.UK product floaters</h1>
+	<h1 class="heading-large">GOV.UK product headers</h1>
 
 	<p>Here's how headers could work for GOV.UK products.</p>
 
