Fix up a few typos etc.

--- a/source/stylesheets/_govuk_styling.scss
+++ b/source/stylesheets/_govuk_styling.scss
@@ -5,6 +5,9 @@
 @import 'govuk_styles/patterns/organisation-logo';
 
 
+::-webkit-input-placeholder{
+	color: $text-colour;
+}
 
 #wrapper{
     min-height: 500px;
